--- a/flutter_google_maps/web/index.html
+++ b/flutter_google_maps/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBayHWiia3dmy7pP-yiicTYPyQInauz6Z0"></script>
 
   <title>flutter_google_maps</title>
   <link rel="manifest" href="manifest.json">
